--- a/mockupViews/gamepage/main.css
+++ b/mockupViews/gamepage/main.css
@@ -4,10 +4,15 @@ body {
 }
 
 .navbar {
-    background: grey;
+    background: #616161; /* For browsers that do not support gradients */
+    background: -webkit-linear-gradient(left top, #616161, white); /* For Safari 5.1 to 6.0 */
+    background: -o-linear-gradient(bottom right, #616161, white); /* For Opera 11.1 to 12.0 */
+    background: -moz-linear-gradient(bottom right, #616161, white); /* For Firefox 3.6 to 15 */
+    background: linear-gradient(to bottom right, #616161, white); /* Standard syntax */
     width: 100%;
+    border-bottom: solid 4px #bdbdbd;
     height: 100px;
-    border-radius: 4px;
+    border-radius: 2px;
 }
 
 .gameName {
@@ -25,7 +30,8 @@ body {
     overflow: hidden;
     height: 500px;
     margin: 0 auto;
-    border-radius: 4px;
+    border-radius: 2px;
+    border-bottom: solid 4px rgba(0,0,0,0.2);
 }
 
 .playbutton {
@@ -41,8 +47,9 @@ body {
     height: 500px;
     float: right;
     margin-right: 35px;
-    border-radius: 4px;
+    border-radius: 2px;
     color: white;
+    border-bottom: solid 4px rgba(0,0,0,0.2);
 }
 
 .highscores {
@@ -51,8 +58,9 @@ body {
     height: 500px;
     float: left;
     margin-left: 35px;
-    border-radius: 4px;
+    border-radius: 2px;
     color: white;
+    border-bottom: solid 4px rgba(0,0,0,0.2);
 }
 
 
@@ -72,5 +80,4 @@ body {
 
 li {
     margin: 10px 0;
-
 }
