--- a/mockupViews/gamepage/main.css
+++ b/mockupViews/gamepage/main.css
@@ -1,6 +1,7 @@
 body {
     background: orange;
     font-family: "Roboto", sans-serif;
+    padding-top: 100px;
 }
 
 .navbar {
@@ -13,6 +14,9 @@ body {
     border-bottom: solid 4px #bdbdbd;
     height: 100px;
     border-radius: 2px;
+    position: fixed;
+    z-index: 999;
+    top: 0px;
 }
 
 .gameName {
