--- a/mockupViews/landing/general.css
+++ b/mockupViews/landing/general.css
@@ -39,6 +39,10 @@ div {
     text-align: center;
 }
 
+.button.full-width:active {
+    margin-bottom: 4px;
+}
+
 a.button {
     text-decoration: none;
 }
