--- a/mockupViews/gamepage/main.css
+++ b/mockupViews/gamepage/main.css
@@ -1,8 +1,31 @@
 body {
-    background: orange;
+    background: #6fd945;
     font-family: "Roboto", sans-serif;
     padding-top: 100px;
+    position: relative;
+}
 
+footer {
+    font-family: "Roboto", sans-serif;
+}
+
+h1, h2 {
+    font-family: "Roboto", sans-serif;
+    font-weight: 300;
+    letter-spacing: 1px;
+}
+
+.image-backdrop {
+    background: url('../img/snakegame.jpg');
+    background-size: cover;
+    filter: blur(50px);
+    overflow: hidden;
+    position: absolute;
+    z-index: -1;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
 }
 
 .navbar {
@@ -11,8 +34,10 @@ body {
     background: -o-linear-gradient(bottom right, #616161, white); /* For Opera 11.1 to 12.0 */
     background: -moz-linear-gradient(bottom right, #616161, white); /* For Firefox 3.6 to 15 */
     background: linear-gradient(to bottom right, #616161, white); /* Standard syntax */
+    background: transparent;
     width: 100%;
     border-bottom: solid 4px #bdbdbd;
+    border-bottom: none;
     height: 100px;
     border-radius: 2px;
     position: fixed;
@@ -37,16 +62,38 @@ body {
     margin: 0 auto;
     border-radius: 2px;
     border-bottom: solid 4px rgba(0,0,0,0.2);
+    transition: all 0.3s;
 }
 
+/*.gamebox:hover {*/
+    /*filter: blur(4px);*/
+/*}*/
+
 .playbutton {
+    font-family: "Roboto", sans-serif;
     position: relative;
     right: -45%;
     bottom: -45%;
+    text-transform: uppercase;
+    font-size: 1em;
+    font-weight: bold;
+    padding: 12px 24px;
+    border-bottom: solid 4px rgba(0,0,0,0.2);
+    color: white;
+    margin: 2px 8px;
+    border-radius: 2px;
+    background-color: #4CAF50;
+}
+
+.playbutton:active {
+    border-bottom-width: 0;
+    bottom: -46%;
+    right: -45%
 
 }
 
 .explanation {
+    font-family: "Roboto", sans-serif;
     background: #2196F3;
     width: 15%;
     height: 500px;
@@ -57,7 +104,12 @@ body {
     border-bottom: solid 4px rgba(0,0,0,0.2);
 }
 
+ .explanation h3{
+     letter-spacing: 1px;
+}
+
 .highscores {
+    font-family: "Roboto", sans-serif;
     background: #2196F3;
     width: 15%;
     height: 500px;
@@ -66,6 +118,10 @@ body {
     border-radius: 2px;
     color: white;
     border-bottom: solid 4px rgba(0,0,0,0.2);
+}
+
+.highscores {
+    letter-spacing: 1px;
 }
 
 
@@ -84,9 +140,18 @@ body {
 }
 
 li {
-    margin: 10px 0;
+    margin: 9px 0;
 }
 
 a {
     color: rgba(0,0,0,5)
 }
+
+.highscore-history {
+    height: 300px;
+    max-height: 300px;
+    position: absolute;
+    bottom: 0;
+    z-index: -1;
+}
+
