Add pointer cursor on hover

--- a/mockupViews/landing/general.css
+++ b/mockupViews/landing/general.css
@@ -18,6 +18,10 @@ div {
     border-radius: 2px;
 }
 
+.button:hover {
+    cursor: pointer
+}
+
 .button:active {
     top: 4px;
     border-bottom-width: 0;
