Fixed navbar on gamePage

--- a/mockupViews/gamepage/main.css
+++ b/mockupViews/gamepage/main.css
@@ -118,12 +118,8 @@ h1, h2 {
     border-radius: 2px;
     color: white;
     border-bottom: solid 4px rgba(0,0,0,0.2);
-}
-
-.highscores {
     letter-spacing: 1px;
 }
-
 
 .expPar {
     margin-right: 20px;
@@ -139,12 +135,8 @@ h1, h2 {
     color: white;
 }
 
-li {
+.highscore-list {
     margin: 9px 0;
-}
-
-a {
-    color: rgba(0,0,0,5)
 }
 
 .highscore-history {
