--- a/TheSnekGame/style.css
+++ b/TheSnekGame/style.css
@@ -1,6 +1,8 @@
-html,body,h1,h2,ul,p,a,li{
+html,body {
 	margin:0;
 	padding:0;
+	height: 100%;
+	width: 100%;
 }
 html{
 	background-color: lightgrey;
@@ -11,41 +13,14 @@ body{
 	height:auto;
 	width:100%;
 }
-#documenter_sidebar{ /*Sidebar properties*/
-	position:fixed;;
-	width:200px;
-	min-height:100%;
-	background-color: lightgrey;
-	color: #222222;
+.document {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 100%;
+	height: 100%;
 }
-#documenter_sidebar li{ /*Button text properties*/
-	text-align:center;
-	font-size:14px;
-	font-weight:bold;
-	}
-#documenter_sidebar a{						/*Create sidebar blocks*/
-	display:block;
-	border-bottom:2px solid #aaa;
-	border-right: 2px solid #aaa;
-	padding:6px 15px 7px 0;
-	background-color: lightgrey;
-	color: #222222;
-	}
-#documenter_sidebar a:hover{ /*Hover with mouse, remove underlining*/
-	text-decoration:none;
-}
-#documenter_content{ /*Content properties*/
-	position:absolute;
-	right:18px;
-	left:218px;
-	padding-left:10px;
-	padding-bottom:800px;
-	min-height:100%;
-	height:auto;
-}
-div.ex{
-	max-width: 350px;
-}
+
 div.play{
 	width: 500px;
 	height: 500px;
@@ -53,16 +28,4 @@ div.play{
 section{	/*Top padding*/
 	padding-top:47px;
 }
-h1 {	/*Header 1 properties*/
-	font-size:30px;
-	font-weight:bold;
-}
-h2 {	/*Header 2 properties*/
-	font-size:20px;
-	margin-bottom:18px;
-	font-weight:500;
-}
-p { /*Paragraph properties*/
-	font-size: 12px;
-	margin:5px 0;
-}
+
