--- a/webtechgames/webtechsite/templates/webtechsite/registration_form.html
+++ b/webtechgames/webtechsite/templates/webtechsite/registration_form.html
@@ -15,31 +15,37 @@
                     <h3>Register for an Account</h3>
 
                     <form class="form-horizontal" role="form" action="" method="post" enctype="multipart/form-data">
-                        <input type="hidden" name="csrfmiddlewaretoken" value="wNPGfRPY2hIxg3pz520oLKyVzArXZ2TCWQ5EsyQMU19p1V8mCt1IeqWJGuhgYKY4">
+                        <input type="hidden" name="csrfmiddlewaretoken"
+                               value="wNPGfRPY2hIxg3pz520oLKyVzArXZ2TCWQ5EsyQMU19p1V8mCt1IeqWJGuhgYKY4">
 
-    <div class="form-group">
-        <div class="col-sm-offset-2 col-sm-10">
-            <span class="text-danger small"></span>
-        </div>
-        <label class="control-label col-sm-2" for="song_title"><label for="id_username">Username:</label></label>
-        <div class="col-sm-10"><input id="id_username" maxlength="150" name="username" type="text" required=""></div>
-    </div>
+                        <div class="form-group">
+                            <div class="col-sm-offset-2 col-sm-10">
+                                <span class="text-danger small"></span>
+                            </div>
+                            <label class="control-label col-sm-2" for="song_title"><label
+                                    for="id_username">Username:</label></label>
+                            <div class="col-sm-10"><input id="id_username" maxlength="150" name="username" type="text"
+                                                          required=""></div>
+                        </div>
 
-    <div class="form-group">
-        <div class="col-sm-offset-2 col-sm-10">
-            <span class="text-danger small"></span>
-        </div>
-        <label class="control-label col-sm-2" for="song_title"><label for="id_email">Email address:</label></label>
-        <div class="col-sm-10"><input id="id_email" maxlength="254" name="email" type="email"></div>
-    </div>
+                        <div class="form-group">
+                            <div class="col-sm-offset-2 col-sm-10">
+                                <span class="text-danger small"></span>
+                            </div>
+                            <label class="control-label col-sm-2" for="song_title"><label for="id_email">Email
+                                address:</label></label>
+                            <div class="col-sm-10"><input id="id_email" maxlength="254" name="email" type="email"></div>
+                        </div>
 
-    <div class="form-group">
-        <div class="col-sm-offset-2 col-sm-10">
-            <span class="text-danger small"></span>
-        </div>
-        <label class="control-label col-sm-2" for="song_title"><label for="id_password">Password:</label></label>
-        <div class="col-sm-10"><input id="id_password" name="password" type="password" required=""></div>
-    </div>
+                        <div class="form-group">
+                            <div class="col-sm-offset-2 col-sm-10">
+                                <span class="text-danger small"></span>
+                            </div>
+                            <label class="control-label col-sm-2" for="song_title"><label
+                                    for="id_password">Password:</label></label>
+                            <div class="col-sm-10"><input id="id_password" name="password" type="password" required="">
+                            </div>
+                        </div>
 
                         <div class="form-group">
                             <div class="col-sm-offset-5 col-sm-10">
@@ -55,6 +61,6 @@
         </div>
     </div>
 </div>
-    </form>
+</form>
 </body>
 </html>
