--- a/webtechgames/webtechsite/templates/webtechsite/login.html
+++ b/webtechgames/webtechsite/templates/webtechsite/login.html
@@ -15,7 +15,7 @@
                     {% if error_message %}
                     <p><strong>{{ error_message }}</strong></p>
                     {% endif %}
-                    <form class="form-horizontal" role="form" action="{% url 'webtechsite:login_user'%}" method="post"
+                    <form class="form-horizontal" role="form" action="" method="post"
                           enctype="multipart/form-data">
                         {% csrf_token %}
                         <div class="form-group">
