--- a/webtechgames/webtechsite/static/webtechsite/main.css
+++ b/webtechgames/webtechsite/static/webtechsite/main.css
@@ -28,6 +28,7 @@ main .banner-content .splash h1 {
     font-family: "Roboto Slab", serif;
     font-size: 2.5em;
     font-weight: 100;
+    color:red;
 }
 
 main .banner-content .splash p {
