--- a/webtechgames/webtechsite/templates/webtechsite/login.html
+++ b/webtechgames/webtechsite/templates/webtechsite/login.html
@@ -42,30 +42,12 @@
                     </form>
                 </div>
                 <div class="panel-footer">
-                    Don't have an account?<br>
-                    <a href="registration_form.html">Click here</a> to register.
+                    Don't have an account?
+                    <a href="../register">Click here</a> to register.
                 </div>
             </div>
         </div>
-        <div class="col-sm-12 col-md-5">
-            <div class="panel panel-default">
-                <div class="panel-body">
-                    <h1>Hello, Welcome to FavMusic!</h1>
-                    <h3>About FavMusic</h3>
-                    <hr>
-                    <p>FavMusic is the app for listening to your favorite music.<br>
-                        You can save your favorite albums and songs in the cloud and listen to then on any device.
-                        Personalize your music experience by creating an account and uploading your music!
-                    </p>
-                    <hr>
-                    <h4>Kind Regards, <br>
-                        <br>
-                        The FavMusic Team
-                    </h4>
 
-                </div>
-            </div>
-        </div>
     </div>
 
 
